test/compile-fail/call__args_more.he
fn main
{
    fn plus (a: int, b: int) { a + b; }
    plus (1, 2, 3); //~ ERROR 3008
}
